--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Daniel Pease",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
